Fix word wrap

--- a/src/components/PopularRepo.scss
+++ b/src/components/PopularRepo.scss
@@ -24,7 +24,7 @@
     margin: 0;
     font-size: 14px;
     padding-top: 15px;
-    word-break: break-word;
+    word-wrap: break-word;
   }
 
   .metadata {
