--- a/src/components/RepoBlock.scss
+++ b/src/components/RepoBlock.scss
@@ -8,7 +8,7 @@
   min-width: 200px;
   text-align: center;
   margin-right: .5em;
-  word-break: break-word;
+  word-wrap: break-word;
 
   &:hover {
     border-style: dashed;
